--- a/force-app/main/default/lwc/accountSummaryLWC/accountSummaryLWC.html
+++ b/force-app/main/default/lwc/accountSummaryLWC/accountSummaryLWC.html
@@ -166,7 +166,7 @@
                                 <thead>
                                     <tr>
                                         <th>Case Number</th>
-                                        <th>Email</th>
+                                        <th>Status</th>
                                     </tr>
                                 </thead>
                                 <template for:each ={cs} for:item="item">
